--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,7 @@
                     <li><a href="#About me">About me</a></li>
                     <li><a href="#Experience">Experience</a></li>
                     <li><a href="#Contact me">Contact me</a></li>
+                    <li><a href="#Resume">Resume</a></li>
                 </ul>
             </div>
         </div>
@@ -26,11 +27,15 @@
         <img src="./photos/nude plant background.jpeg" alt="abstract plant background"
         class="center">
             <h2 id="About me">About me</h2>
-            <p>Hello! My name is bla bla bla bla </p>
+            <p>Hello! My name is Sofia Sosa and I am currently a Kindergarten teacher. I have always loved and used technology in my classroom and wanted to learn how to code. I am currently taking a coding bootcamp at UT Austin and i am beyond excited to learn and showcase my skills.</p>
             <h2 id="Experience">Experience</h2>
-            <p> bla bla bla bla</p>
+            <p> I have been an educator for 8 years. </p>
             <h2 id="Contact me">Contact me</h2>
-            <p>bla bla bla bla laa</p>
+            <p>Email: Sofiasosaperez@outlook.com</p>
+            <p>Cellphone: 903-262-6289</p>
+            <p>LinkedIn</p>
+            <h2 id="Resume">Resume</h2>
+            <p>Download</p>
         </section>
         
         <section>
