--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="about-par">
-                <p class="par-1">Hi! My name is Sofia Sosa and I am a kindergarten teacher by day, UT Austin bootcamp student studying Code by night, a mom 24 hours of the day and a hero to all, basically a modern day Daenerys Targeryen. I have always loved solving problems and taking up challenges and i love that coding allows me to push myself everyday. Whether it is through creating something from scratch or debugging, i enjoy all of it. Some other things i enjoy that include no crying are traveling, reading books with rather corny titles, 
+                <p class="par-1">Hi! My name is Sofia Sosa and I am a kindergarten teacher by day, UT Austin bootcamp student studying Code by night, a mom 24 hours of the day and a hero to all, basically a modern day Daenerys Targeryen. I have always loved solving problems and taking up challenges and I love that coding allows me to push myself everyday. Whether it is through creating something from scratch or debugging, I enjoy all of it. Some other things I enjoy that include no crying are traveling, reading books with rather corny titles, 
                 playing tennis with my two kids and watching them "win" everytime, seeing my kinder students learn how to read, exercising (although there is no time for that since the bootcamp), sleeping (refer to previous comment) and gardening.</p>
             </div>
         </div>
