added project 1 to portfolio

--- a/index.html
+++ b/index.html
@@ -68,9 +68,13 @@
             <div class="about-sec">
                 <h2 class="about-title">Work</h2>
             </div>
-            <div class="about-par">
+            <a href="https://sdnovice.github.io/no-more-dog-days/" target="_blank" class="portfolio__item">
+                <img src="./assets/photos/Screen Shot 2022-12-13 at 10.26.02 PM.png" alt="screenshot project" class="project1">
+              </a>
+            <!-- <div class="about-par">
                 <img src="./assets/photos/burlap.jpg" alt="texture paper" class="image-1">
-            </div>
+                
+            </div> -->
         </div>
         <div class="aboutme">
             <div class="two-photos-1">
